[project]
name = "grammarly_enhancer"
version = "0.1.0"
description = "grammarly-enhancer using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0"
]

[project.scripts]
grammarly_enhancer = "grammarly_enhancer.main:run"
run_crew = "grammarly_enhancer.main:run"
train = "grammarly_enhancer.main:train"
replay = "grammarly_enhancer.main:replay"
test = "grammarly_enhancer.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
